Sandbox Refresh Assistant  (Package for Source Org)/objects/metadata_backup_Jobs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Boolean_Field_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean_Field_Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>date_Field_Test__c</fullName>
        <label>date Field Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datetime_field_test__c</fullName>
        <label>datetime field test</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>job_Id__c</fullName>
        <label>job Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>job_type__c</fullName>
        <label>job type</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>number_field_Test__c</fullName>
        <label>number_field_Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>metadata backup Jobs</label>
</CustomObject>